[gd_scene load_steps=5 format=2]

[ext_resource path="res://day9/day9.gd" type="Script" id=1]
[ext_resource path="res://day9/assets/tiles_dungeon_v1.1.png" type="Texture" id=2]
[ext_resource path="res://day9/perso.tscn" type="PackedScene" id=3]

[sub_resource type="TileSet" id=1]
0/name = "tiles_dungeon_v1.1.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 64, 128, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 436.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 44.0
margin_bottom = 27.0
text = "Day 9 :"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 148.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="puzzle_1" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 252.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
text = "Test"
readonly = true

[node name="puzzle_2" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 256.0
margin_right = 356.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
text = "Test"
readonly = true

[node name="playAnimation" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 360.0
margin_right = 436.0
margin_bottom = 40.0

[node name="ReferenceRect" type="ReferenceRect" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 436.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 200 )

[node name="TileMap" type="TileMap" parent="VBoxContainer/ReferenceRect"]
scale = Vector2( 1.5, 1.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 3, 2, 0, 1, 6, 0, 0, 7, 0, 0, 65536, 0, 3, 65537, 0, 0, 65538, 0, 3, 65542, 0, 0, 131072, 0, 1, 131073, 0, 1, 131074, 0, 0, 131078, 0, 0, 196614, 0, 0, 196615, 0, 0, 262150, 0, 0, 262151, 0, 0, 327686, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0 )

[node name="Perso" parent="VBoxContainer/ReferenceRect/TileMap" instance=ExtResource( 3 )]

[node name="Perso2" parent="VBoxContainer/ReferenceRect/TileMap" instance=ExtResource( 3 )]
